# rust-simple-crud-with-login-api

./: .env  Cargo.toml  Dockerfile  README.md  bash.exe.stackdump  docker-compose.yml
migrations/: 20250916153139_create_users_and_todos_tables.sql
src/: auth_middleware.rs  config.rs  errors.rs  handlers.rs  main.rs  models.rs  routes.rs
src/api/: auth.rs  mod.rs
src/handlers/: auth.rs  todos.rs
src/middleware/: auth.rs
